# dianyaapi-ffi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
.github/workflows/: publish.yml
examples/c/: README.md
examples/c/stream/: .gitignore  Makefile  main.c
examples/c/transcribe/: Makefile  main.c
examples/go-example/: README.md  go.mod  main.go
examples/swift-example/example/: AudioRecorder.swift  ContentView.swift  TranscribeView.swift  TranslateView.swift  exampleApp.swift
examples/swift-example/example.xcodeproj/: project.pbxproj
examples/swift-example/example.xcodeproj/project.xcworkspace/xcuserdata/jesse.xcuserdatad/: UserInterfaceState.xcuserstate
examples/swift-ios/example/: AudioRecorder.swift  TranscribeView.swift  TranslateView.swift  exampleApp.swift
examples/swift-ios/example.xcodeproj/: project.pbxproj
examples/swift-ios/example.xcodeproj/project.xcworkspace/xcuserdata/jesse.xcuserdatad/: UserInterfaceState.xcuserstate
examples/swift-ios/example.xcodeproj/xcshareddata/xcschemes/: example.xcscheme
examples/swift-ios/example.xcodeproj/xcuserdata/jesse.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/swift-ios/example.xcodeproj/xcuserdata/jesse.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/swift-mac/example/: AudioRecorder.swift  ContentView.swift  TranscribeView.swift  TranslateView.swift  example.entitlements  exampleApp.swift
examples/swift-mac/example.xcodeproj/: project.pbxproj
examples/swift-mac/example.xcodeproj/project.xcworkspace/xcuserdata/jesse.xcuserdatad/: UserInterfaceState.xcuserstate
export/darwin/: .gitignore  Package.swift  README.md
export/darwin/Sources/DianyaAPI/: DianyaAPI.swift  TranscribeApi.swift  TranscribeStream.swift  dianyaapi_ffi.h  dianyaapi_ffi_original.h
export/darwin/Sources/DianyaAPI/Models/: ErrorModels.swift  TranscribeModels.swift  WebSocketModels.swift
export/darwin/Sources/DianyaAPI/Utils/: FFIBridge.swift  MemoryManager.swift  TypeConverters.swift
export/darwin/Sources/DianyaAPIFFI/: module.modulemap
export/darwin/Sources/include/: dianyaapi_ffi.h
export/go-lang/: CMakeLists.txt  README.md  go.mod  transcribe_api.go  transcribe_stream.go
export/go-lang/cmake/: copy_artifacts.cmake
export/scripts/: build-xcframework.sh
include/: dianyaapi_ffi.h
src/: error.rs  lib.rs  runtime.rs  transcribe_api.rs  transcribe_stream.rs  types_ffi.rs  utils.rs
src/types_ffi/: export.rs  share.rs  status.rs  summary.rs  translate.rs  upload.rs  ws.rs
