[package]
name = "dianyaapi-ffi"
version = "0.1.1"
edition = "2021"

[lib]
name = "dianyaapi_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
common = { git = "https://github.com/dianyaai/dianyaapi_sdk.git", package = "common" }
transcribe = { git = "https://github.com/dianyaai/dianyaapi_sdk.git", package = "transcribe" }

stream-cancel = "0.8"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tungstenite = "0.28"

[build-dependencies]
cbindgen = "0.29"
